--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -7,7 +7,8 @@
   max-width: 400px;
   padding: 10px 20px;
   margin: 0 auto;
-  border-radius: 5px;
+  border-radius: 50px;
+  box-shadow: 0 3px 5px #ccc;
 }
 
 .signup .submit {
