--- a/src/components/Admin/PostInformation/PostInformation.module.css
+++ b/src/components/Admin/PostInformation/PostInformation.module.css
@@ -1,9 +1,6 @@
 .PostInformation {
-  margin: 50px 0px;
+  padding: 25px;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .title {
