--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+button.close {
+  border: none;
+  background-color: transparent;
+}
+
+button.close span {
+  font-size: 24px;
+}
+
+span.sr-only {
+  display: none;
+}
