--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@
   align-items: center;
   padding: 0 25px;
 }
+
+.Navbar div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
